# the_tuul

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  vite.config.common.ts  vite.config.dev.ts  vite.config.prod.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: docker-build-push.yml
api/: loggers.py  main.py  separator_server.py  settings.py  views.py  vite_assets.py
api/helpers/: cloud_storage.py  youtube_helper.py  zip_helper.py
api/karaoke/: music_separation.py
api/templates/: index.html
frontend/: App.vue  index.html  index.ts  main.scss
frontend/components/: HelpTab.vue  SmoothAudioPlayer.vue  SongInfoTab.vue  SongTimingTab.vue  SourceFileDownloadLinks.vue  SubmitTab.vue  SubtitleDisplay.vue  TimingAdjuster.vue  TimingAdjustmentTab.vue  VideoPreview.vue  Wavesurfer.vue
frontend/lib/: TimingsList.ts  adjustments.ts  timing.spec.ts  timing.ts  util.ts  video.spec.ts  video.ts
frontend/lib/wavesurferPlugins/: OpenEndedRegionPlugin.ts
frontend/stores/: lyrics.spec.ts  lyrics.ts  media.ts  settings.spec.ts  settings.ts  timings.spec.ts  timings.ts
tests/api/: download_youtube_video_test.py  log_error_test.py  separate_track_test.py  test_cloud_storage.py  test_separate_track_caching.py
tests/api/helpers/: youtube_helper_test.py
tests/e2e/: multi-screen-timing.spec.ts  separate-track-direct.spec.ts  timings-file-upload.spec.ts
tests/e2e/utils/: apiMocks.ts  assertions.ts  setupHelpers.ts  timings.ts
